unpackaged/main/default/objects/Campaign_Case__c/Campaign_Case__c.object-meta.xml
<CustomObject>
    <description>This is used to store all case questionnaire data and pertininant information that is filled out via questionaires into a standardized data format.  This allows us to free up Intake form information and create standard Case Data fields to use across cases.  (Replaces individual case objects like &#39;Camp Lejuene&#39;, &#39;Talcum&#39;, and &#39;Paraquate Case&#39;)</description>
    <label>Campaign Case</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Campaign Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>