unpackaged/main/default/objects/Campaign_Case__c/fields/Affected_Areas__c.field-meta.xml
<CustomField>
    <fullName>Affected_Areas__c</fullName>
    <description>This is to allow the selection of areas affected by the product, this can include the person or locations depending on the case type/campaign we are dealing with.</description>
    <inlineHelpText>Areas affected by the product/incident.</inlineHelpText>
    <label>Affected Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Affected_Areas_Locations</valueSetName>
    </valueSet>
</CustomField>