unpackaged/main/default/objects/Campaign_Case__c/fields/API_External_ID__c.field-meta.xml
<CustomField>
    <fullName>API_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>API External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>