unpackaged/main/default/objects/Campaign_Case__c/fields/Associated_Cause__c.field-meta.xml
<CustomField>
    <fullName>Associated_Cause__c</fullName>
    <description>FLOW ONLY: Used to capture information in questionnaire to help show what would potentially cause or provide a reason for a person to be involved in the incident or any suffering.  It is specific to the associated cause of not being a direct victim but having someone suffer because of a victim.  I.e. Fire fighter, family members of patient, third party employee that was exposed, etc.</description>
    <inlineHelpText>The associated reason a person may have been involed with a case.</inlineHelpText>
    <label>Associated Cause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>