unpackaged/main/default/objects/Campaign_Case__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The assigned case type that is designated for this Case.  This determines the reporting/routing etc.  This is directly tied to the campaign being worked.  Is tied to automation and questionnaires.</description>
    <inlineHelpText>Case Type of the campaign this Campaign Case is attached to.</inlineHelpText>
    <label>Case Type</label>
    <referenceTo>litify_pm__Case_Type__c</referenceTo>
    <relationshipLabel>Campaign Cases</relationshipLabel>
    <relationshipName>Campaign_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>