unpackaged/main/default/objects/Campaign_Case__c/fields/Cause_of_Injury_Death__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Injury_Death__c</fullName>
    <description>Used to show the direct cause of death or expected cause of the injury received by client and used in litigation questions</description>
    <inlineHelpText>The defining factor that lead to the injury or death of the client.</inlineHelpText>
    <label>Cause of Injury/Death</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cause_of_Injury</valueSetName>
    </valueSet>
</CustomField>