unpackaged/main/default/objects/Campaign_Case__c/fields/Claiment_Age_at_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Claiment_Age_at_Occurrence__c</fullName>
    <description>Used to calculate the age of when the diagnosis, death, or expience occurred</description>
    <formula>IF(Date_of_Diagnosis__c &lt; ADDMONTHS(Patient_Date_of_Birth__c, 12), TEXT(MONTH(Date_of_Diagnosis__c) - MONTH(Patient_Date_of_Birth__c)) + &quot; Months&quot;,

IF(Date_of_Diagnosis__c &gt; ADDMONTHS(Patient_Date_of_Birth__c, 12),
TEXT(FLOOR( (MONTH( Date_of_Diagnosis__c ) + (( 12 * (YEAR(Date_of_Diagnosis__c)- YEAR(Patient_Date_of_Birth__c)))) - MONTH(Patient_Date_of_Birth__c)) / 12 )) + &quot; Years&quot;,

IF(  Patient_Date_of_Death__c &lt; ADDMONTHS(Patient_Date_of_Birth__c, 12), TEXT(MONTH(Patient_Date_of_Death__c) - MONTH(Patient_Date_of_Birth__c)) + &quot; Months&quot;,

 

TEXT(FLOOR( (MONTH( Patient_Date_of_Death__c ) + (( 12 * (YEAR(Patient_Date_of_Death__c)- YEAR(Patient_Date_of_Birth__c)))) - MONTH(Patient_Date_of_Birth__c)) / 12 )) + &quot; Years&quot;


)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age at Diagnosis, death, experience when it occurred.</inlineHelpText>
    <label>Claiment Age at Occurrence</label>
    <type>Text</type>
</CustomField>