unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Additional_Case_Notes_Shared__c.field-meta.xml
<CustomField>
    <fullName>CM_Additional_Case_Notes_Shared__c</fullName>
    <description>Used to capture any additional points of data during the questionnaire.  Specifically asked in the questionnaire in case a client has any important information not asked that should be shared.</description>
    <inlineHelpText>Extra information provided by client in questionnaire</inlineHelpText>
    <label>CM Additional Case Notes Shared</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>