unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Advertising_Check__c.field-meta.xml
<CustomField>
    <fullName>CM_Advertising_Check__c</fullName>
    <description>Check on advertising related information. whether they saw something about it or not etc. (D&amp;C related question)</description>
    <inlineHelpText>Advertising question check.</inlineHelpText>
    <label>CM Advertising Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Personal_Attributes_or_Experience</valueSetName>
    </valueSet>
</CustomField>