unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Application_Details_2__c.field-meta.xml
<CustomField>
    <fullName>CM_Application_Details_2__c</fullName>
    <description>Case Management field use for Application Details around the use of a product and how it was applied and in what areas.</description>
    <label>CM Application Details 2</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>