unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Application_Details__c.field-meta.xml
<CustomField>
    <fullName>CM_Application_Details__c</fullName>
    <description>Case Management Information around how products were applied and what they were used for or how.</description>
    <label>CM Application Details</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>