unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Certified_Cause_of_Death__c.field-meta.xml
<CustomField>
    <fullName>CM_Certified_Cause_of_Death__c</fullName>
    <description>This is an open ended question for cause of death that may appear on a death certification for case management purposes.</description>
    <inlineHelpText>Cause of death as listed on death certificate.</inlineHelpText>
    <label>CM Certified Cause of Death</label>
    <length>255</length>
    <type>Text</type>
</CustomField>