unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Client_Details_2__c.field-meta.xml
<CustomField>
    <fullName>CM_Client_Details_2__c</fullName>
    <description>Used for Case Management information to collect information about client or family history of client for greater ease of collecting open ended questions.</description>
    <inlineHelpText>Client details about family or life.</inlineHelpText>
    <label>CM Client Details 2</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>