unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Client_Details__c.field-meta.xml
<CustomField>
    <fullName>CM_Client_Details__c</fullName>
    <description>Case Management questions directly related to the client and details about their life, financial situation, businesses, etc.</description>
    <label>CM Client Details</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>