unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Clinic_Addresses__c.field-meta.xml
<CustomField>
    <fullName>CM_Clinic_Addresses__c</fullName>
    <description>Used to place numerous amounts of clinic addresses for later case management work and provide extensive information law firms.</description>
    <inlineHelpText>Clinic addresses visited by client</inlineHelpText>
    <label>CM Clinic Addresses</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>