unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Death_Information__c.field-meta.xml
<CustomField>
    <fullName>CM_Death_Information__c</fullName>
    <description>This field is to store death case details, such as, cemetery address, where the injured party was cremated, coroner&#39;s office address, etc.</description>
    <inlineHelpText>Death Information Details</inlineHelpText>
    <label>CM Death Information</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>