unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Exposure_Details__c.field-meta.xml
<CustomField>
    <fullName>CM_Exposure_Details__c</fullName>
    <description>Case Management information around exposure to products or settings.</description>
    <label>CM Exposure Details</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>