unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Exposure_Details_Address_2__c.field-meta.xml
<CustomField>
    <fullName>CM_Exposure_Details_Address_2__c</fullName>
    <description>Generally WORK ADDRESSES. We are using this as Case Management criteria fields to allow reps to input addresses.
Open text field for random needs for understanding exposure information. This is specific to campaign case questions being asked. Details and format are established in Question Details/directions.</description>
    <label>CM Exposure Details Address 2</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>