unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Family_History_Details__c.field-meta.xml
<CustomField>
    <fullName>CM_Family_History_Details__c</fullName>
    <description>Case Management information specific around family history details to be used when determining historical details of drug use, behaviors etc.</description>
    <inlineHelpText>Details around family background that can affect cases.</inlineHelpText>
    <label>CM Family History Details</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>