unpackaged/main/default/objects/Campaign_Case__c/fields/CM_First_Learned_of_Case_Details__c.field-meta.xml
<CustomField>
    <fullName>CM_First_Learned_of_Case_Details__c</fullName>
    <description>This field holds information about how the client first learned of the case and details around it.  This helps understand the circumstances around learning about it.  Came from Round Up.</description>
    <label>CM First Learned of Case Details</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>