unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Height__c.field-meta.xml
<CustomField>
    <fullName>CM_Height__c</fullName>
    <description>Not an item that is critical for qualifying or determining a value of a case, we are placing this hear as a Case Management item that originally started as a place holder for hair relaxer questionnaire</description>
    <inlineHelpText>Defined height of the person or items in the case.</inlineHelpText>
    <label>CM Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>