unpackaged/main/default/objects/Campaign_Case__c/fields/CM_How_did_they_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>CM_How_did_they_hear_about_us__c</fullName>
    <description>General filler from needs on a few campaigns that ask this marketing question that could be considered case management at a stretch that is asking information on how they heard about us.  It is truly a place holder for hair relaxer is how it started.</description>
    <inlineHelpText>How did they hear about us? Details as to how.</inlineHelpText>
    <label>CM How did they hear about us</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>