unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Pre_Existing_Conditions__c.field-meta.xml
<CustomField>
    <fullName>CM_Pre_Existing_Conditions__c</fullName>
    <description>Used for case management notes to note any pre-exisitng conditions that are not reportable or need to be defined. These serve as catch all questions to dtermine any extra factors that may need to be considered.</description>
    <inlineHelpText>Any potential pre-existing conditions a client brings up.</inlineHelpText>
    <label>CM Pre-Existing Conditions</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>