unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Product_Use_Details__c.field-meta.xml
<CustomField>
    <fullName>CM_Product_Use_Details__c</fullName>
    <description>Case Management details about product use to gather information for firms only.  Not to be used for reporting or any other purpose.</description>
    <label>CM Product Use Details</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>