unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Purchase_Information__c.field-meta.xml
<CustomField>
    <fullName>CM_Purchase_Information__c</fullName>
    <description>GENERALLY LOCATION BASED: Case Management info used to find out information about how purchases were made and the circumstances around it with any proof.</description>
    <label>CM Purchase Information</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>