unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Treatment_Details_2__c.field-meta.xml
<CustomField>
    <fullName>CM_Treatment_Details_2__c</fullName>
    <description>GENERALLY Furthe details of facility or people: Case Management items that go through what treatments were given, how they were given, where they were given and any date details attached.</description>
    <label>CM Treatment Details 2</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>