unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Treatment_Details_3__c.field-meta.xml
<CustomField>
    <fullName>CM_Treatment_Details_3__c</fullName>
    <description>GENERALLY Further details of facility or people: Case Management items that go through what treatments were given, how they were given, where they were given and any date details attached.</description>
    <label>CM Treatment Details 3</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>