unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Treatment_Details__c.field-meta.xml
<CustomField>
    <fullName>CM_Treatment_Details__c</fullName>
    <description>GENERALLY WHAT TREATMENTS RECEIVED: Case Management items that go through what treatments were given, how they were given, where they were given and any date details attached.</description>
    <label>CM Treatment Details</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>