unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Treatment_Notes_2__c.field-meta.xml
<CustomField>
    <fullName>CM_Treatment_Notes_2__c</fullName>
    <description>GENERALLY WHAT TREATMENTS RECEIVED: Case Management items that go through what treatments were given, how they were given, where they were given and any date details attached.
Notes tend to be followup items.</description>
    <label>CM Treatment Notes 2</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>