unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Treatment_Notes__c.field-meta.xml
<CustomField>
    <fullName>CM_Treatment_Notes__c</fullName>
    <description>Holdover from LawRuler - Used to input any treatment information that is desired for the case.  Criteria is held in the Litify question to determine acceptable responses.</description>
    <inlineHelpText>Treatment related information</inlineHelpText>
    <label>CM Treatment Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>