unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Type_of_Application_Exposure__c.field-meta.xml
<CustomField>
    <fullName>CM_Type_of_Application_Exposure__c</fullName>
    <description>Used to gather information about the type of application of product or scenarios of product that exposed the user to it.  This can&#39;t help with scoring and is considered Case Management effort for that reason.</description>
    <label>CM Type of Application Exposure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Application</valueSetName>
    </valueSet>
</CustomField>