unpackaged/main/default/objects/Campaign_Case__c/fields/CM_Weight__c.field-meta.xml
<CustomField>
    <fullName>CM_Weight__c</fullName>
    <description>Used to understand weight specifics of a client during birth or objects they used.  Might not be case management, but I am placing it as such due to not being able to report or filter off the information.</description>
    <inlineHelpText>Weight</inlineHelpText>
    <label>CM_Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>