unpackaged/main/default/objects/Campaign_Case__c/fields/Costs_and_Expenses_Accrued__c.field-meta.xml
<CustomField>
    <fullName>Costs_and_Expenses_Accrued__c</fullName>
    <description>This helps determine the costs or expensives involved with the handling of the issue.  Any costs or expenses for medical care or understand if there was any cost and/or expense involved with the case.</description>
    <label>Costs and Expenses Accrued</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Costs_and_Expenses</valueSetName>
    </valueSet>
</CustomField>