unpackaged/main/default/objects/Campaign_Case__c/fields/Country_States_of_Occurence__c.field-meta.xml
<CustomField>
    <fullName>Country_States_of_Occurence__c</fullName>
    <description>Allows the selection of all states that a product may have been used in or any exposure may have occurred</description>
    <inlineHelpText>All states that exposure to product took place.</inlineHelpText>
    <label>Country States of Occurence</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>