unpackaged/main/default/objects/Campaign_Case__c/fields/Date_First_Learned__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Learned__c</fullName>
    <description>Date first learned of any connection between a case and a diagnosis for themselves or family member.  Used in statute of limitations or other filters put on by partners.</description>
    <inlineHelpText>Date of learning about a connection between diagnosis of them or family member.</inlineHelpText>
    <label>Date First Learned</label>
    <type>Date</type>
</CustomField>