unpackaged/main/default/objects/Campaign_Case__c/fields/Date_of_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Diagnosis__c</fullName>
    <description>This is used to determine time frames for a diagnosis with SOL and Liability criteria that can be verified.  This should be used in conjunction with formulas to determine time frames for criteria.</description>
    <inlineHelpText>Date the client was diagnosed. Januar 1, should be used as a default date if the client does not know the exact date, but the Year is required.</inlineHelpText>
    <label>Date of Diagnosis</label>
    <type>Date</type>
</CustomField>