unpackaged/main/default/objects/Campaign_Case__c/fields/Date_of_First_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Exposure__c</fullName>
    <description>This tracks the date of first use or exposure of a product with the client.  Should be used for determining time frames for SOL and liability criteria.</description>
    <inlineHelpText>Date of first use or exposure of product.</inlineHelpText>
    <label>Date of First Exposure</label>
    <type>Date</type>
</CustomField>