unpackaged/main/default/objects/Campaign_Case__c/fields/Date_of_Second_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Second_Diagnosis__c</fullName>
    <description>This is used to determine time frames for a diagnosis with SOL and Liability criteria that can be verified. This should be used in conjunction with formulas to determine time frames for criteria.  Used when a second illness or diagnosis is asked for.</description>
    <inlineHelpText>Secondary diagnosis of another illness.</inlineHelpText>
    <label>Date of Second Diagnosis</label>
    <type>Date</type>
</CustomField>