unpackaged/main/default/objects/Campaign_Case__c/fields/Diagnosis_1__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_1__c</fullName>
    <description>Primary diagnosis field used to pull in data from questionnaires for listed Diagnoses.  This allows us to easily report on this information vs a multi select and simplifies the reps experience.</description>
    <inlineHelpText>Primary Diagnosis from Questionnaire</inlineHelpText>
    <label>Diagnosis 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Diagnosis</valueSetName>
    </valueSet>
</CustomField>