unpackaged/main/default/objects/Campaign_Case__c/fields/Diagnosis_2__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_2__c</fullName>
    <description>Secondary Diagnosis to allow for clients to provide us more than one Diagnosis in cases or secondary options that can be reported on.</description>
    <inlineHelpText>Secondary Diagnosis from Questionnaire provided by client.</inlineHelpText>
    <label>Diagnosis 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Diagnosis</valueSetName>
    </valueSet>
</CustomField>