unpackaged/main/default/objects/Campaign_Case__c/fields/Diagnosis_3__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_3__c</fullName>
    <description>Tertiary Diagnosis from questionnaires to report on and provide extra options in questionnaires</description>
    <inlineHelpText>Tertiary from Questionnaire data.</inlineHelpText>
    <label>Diagnosis 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Diagnosis</valueSetName>
    </valueSet>
</CustomField>