unpackaged/main/default/objects/Campaign_Case__c/fields/Diagnosis_Check_2__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Check_2__c</fullName>
    <description>Used purely for qualification and based on hold over methods of bad questionnaire builds from LawRuler, Use until better methods can be created.</description>
    <inlineHelpText>Check for qualification criteria.</inlineHelpText>
    <label>Diagnosis Check 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Diagnosis_Checks</valueSetName>
    </valueSet>
</CustomField>