unpackaged/main/default/objects/Campaign_Case__c/fields/Diagnosis_Year__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Year__c</fullName>
    <description>This houses information on the year a person was diagnosed.  Dates can be too specific and a general year allows us easier time/give on calls with clients.</description>
    <inlineHelpText>Year the patient was diagnosed</inlineHelpText>
    <label>Diagnosis Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>