unpackaged/main/default/objects/Campaign_Case__c/fields/Discovery_Date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Date__c</fullName>
    <description>Date used to determine SOL for the case and help understand when they first reached out or found a connection to the issues presented in the case they are part of.</description>
    <inlineHelpText>Date that client learned of a connection or approached legal advice.</inlineHelpText>
    <label>Discovery Date</label>
    <type>Date</type>
</CustomField>