unpackaged/main/default/objects/Campaign_Case__c/fields/Documentation_of_Records__c.field-meta.xml
<CustomField>
    <fullName>Documentation_of_Records__c</fullName>
    <description>This is used to determine if there are records of any incident and what type of records they may have. This is to remove the need for a Yes or No for any and every type of documentation they may have or require for a case. So we can provide options to show &quot;medical and accident&quot; records or &quot;medical only&quot; etc.</description>
    <inlineHelpText>Records the client has of documentation of incidences and/or treatment</inlineHelpText>
    <label>Documentation of Records</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Documentation_Records</valueSetName>
    </valueSet>
</CustomField>