unpackaged/main/default/objects/Campaign_Case__c/fields/End_Date_of_Second_Exposure__c.field-meta.xml
<CustomField>
    <fullName>End_Date_of_Second_Exposure__c</fullName>
    <description>This is for a secondary exposure scenario that is checked against. This tracks the date of last use or exposure of a product with the client. Should be used for determining time frames for SOL and liability criteria.</description>
    <inlineHelpText>End date of second product or experience they were exposed to related to the case.</inlineHelpText>
    <label>End Date of Second Exposure</label>
    <type>Date</type>
</CustomField>