unpackaged/main/default/objects/Campaign_Case__c/fields/Evidence_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Documentation__c</fullName>
    <description>Used to answer questions around evidence and any documentation that may exist around it for further review and qualification criteria.</description>
    <label>Evidence Documentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evidence</valueSetName>
    </valueSet>
</CustomField>