unpackaged/main/default/objects/Campaign_Case__c/fields/Exposure_Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Time_Frame__c</fullName>
    <description>Used to automaticall report and show the time frame of use or exposure based on date field entries provided in questionnaires.  This helps auto calculate for criteria on liability or SOL scenarios.</description>
    <formula>IF(NOT(AND(ISBLANK( Years_Used__c), ISBLANK( Hours_Used__c ))), TEXT(Years_Used__c*Hours_Used__c) + &quot; Hours&quot;, &quot;Unknown&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exposure Time Frame</label>
    <type>Text</type>
</CustomField>