unpackaged/main/default/objects/Campaign_Case__c/fields/Exposure_Use_Check_3__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Use_Check_3__c</fullName>
    <description>Used purely for qualification and based on hold over methods of bad questionnaire builds from LawRuler, Use until better methods can be created.</description>
    <inlineHelpText>Check for qualification criteria.</inlineHelpText>
    <label>Exposure/Use Check 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Exposure_Use_Checks</valueSetName>
    </valueSet>
</CustomField>