unpackaged/main/default/objects/Campaign_Case__c/fields/Facility_of_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Facility_of_Diagnosis__c</fullName>
    <description>This is used to capture the facility on the case that the client received their official diagnosis.  This can be used as Diagnosis and Treatment if they are the same and if it doesn&#39;t matter to the case.  If Treatment should be considered different use the &quot;Facility of Treatment&quot; to indicate this information.</description>
    <inlineHelpText>Facility that the client received their official Diagnosis.</inlineHelpText>
    <label>Facility of Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>